--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,8 +2,17 @@
   "routes": [
     {
       "route": "/*",
-      "allowedRoles": ["authenticated"],
-      "redirect": "/.auth/login/aad"
+      "allowedRoles": ["authenticated"]
     }
-  ]
+  ],
+  "responseOverrides": {
+    "401": {
+      "redirect": "/.auth/login/aad",
+      "statusCode": 302
+    },
+    "403": {
+      "redirect": "/.auth/login/aad",
+      "statusCode": 302
+    }
+  }
 }
